# vn_qtrade

./: .gitignore  DOCUMENTATION.md  README.md  setup.cfg
ai_trade/: base.py  gi_llm_integration.py
engine/: demo.py  engine.py  okex_engine.py  run.py  utils.py
scripts/: aliyun_swap.sh  start_proxy.sh
strategy/: .gitignore  demo.py  llm_strategy.py  run.py  test_llm.py
vn_qtrade/: __init__.py  base.py  okx_engine.py  tui.css  tui.py  utils.py
vn_qtrade/ai_trade/: engine.py
