[metadata]
name = vn_qtrade
version = attr: vn_qtrade.__version__
author = djoffrey
author_email = origingod.oh@gmail.com
description = vnpy+ccxt
long_description = file: README.md
long_description_content_type = text/markdown
url = https://not.now
keywords =
    quant
    quantitative
    investment
    trading
    algotrading
    okx
    btc
    crypto
classifiers =
    Development Status :: 5 - Production/Stable
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Operating System :: MacOS
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Office/Business :: Financial :: Investment
    Programming Language :: Python :: Implementation :: CPython
    License :: OSI Approved :: MIT License
    Natural Language :: English

[options]
packages = find:
zip_safe = False
install_requires =
    vnpy_evo
    vnpy_rest
    vnpy_websocket
    ccxt
